Fix titles so long titles do not bleed past box

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -51,6 +51,7 @@
         display: block;
         float: left;
         margin: 0 0.5% 20px;
+        overflow: auto;
         width: 32%;
       }
 
